# bahnhof

./: .gitignore  CMakeLists.txt  Makefile  THIRD_PARTY_NOTICES.md  buildings.cpp  control.cpp  main.cpp  readme.md  rollingstock.cpp  track.cpp  train  utils.cpp  utils.h
assets/: barley.piskel  flakvagn.piskel  hops.piskel  iconrefrigeratorcar.piskel  loco0.piskel  switch.piskel
assets/lang/: en.txt  sv.txt
assets/piskel/buildings/: brewery.piskel  brewery2.piskel  tavern.piskel  wagonfactory.piskel
assets/piskel/effects/: light.piskel
assets/piskel/resources/: beer.piskel
assets/piskel/rollingstock/: kylvagn.piskel  loco0.piskel  openwagon.piskel
assets/piskel/track/: signal.piskel
cmake/: readme.md
include/bahnhof/: utils.h
include/bahnhof/buildings/: buildingmanager.h  buildings.h  buildingtypes.h
include/bahnhof/common/: camera.h  constants.h  forwardincludes.h  gamestate.h  geometry.h  input.h  localization.h  math.h  orientation.h  performance.h  rendering.h  shape.h  timing.h
include/bahnhof/economy/: account.h  company.h  control.h  economymanager.h  entity.h  money.h  owner.h  payments.h  person.h  playercontrol.h  portfolio.h  shares.h  stake.h  stock.h  stockmarket.h  thepublic.h
include/bahnhof/graphics/: graphics.h  rendering.h  sprite.h  spritenames.h
include/bahnhof/input/: builder.h  controlmanager.h  controlmode.h  idlemode.h  input.h  inputmode.h  inputmodes.h  textinput.h
include/bahnhof/resources/: resources.h  resourcetypes.h  storage.h
include/bahnhof/rollingstock/: rollingstock.h  rollingstockmanager.h  train.h  trainmanager.h  wagontypes.h
include/bahnhof/routing/: routefollower.h  routing.h
include/bahnhof/track/: state.h  track.h  trackinternal.h  tracksdisplaymode.h
include/bahnhof/ui/: buttons.h  decoration.h  element.h  host.h  layouts.h  ownership.h  panels.h  tablelines.h  tables.h  ui.h  uimath.h  uistyle.h
src/: CMakeLists.txt  buildings.cpp  camera.cpp  control.cpp  gamestate.cpp  input.cpp  main.cpp  math.cpp  orientation.cpp  rendering.cpp  resources.cpp  rollingstock.cpp  shape.cpp  timing.cpp  track.cpp  train.cpp  utils.cpp
src/buildings/: buildingmanager.cpp  buildings.cpp
src/economy/: economy.cpp  economymanager.cpp  slogans.cpp
src/game/: camera.cpp  game.cpp  gamestate.cpp  input.cpp  main.cpp  resources.cpp  timing.cpp
src/graphics/: graphics.cpp  rendering.cpp  sprite.cpp  spritemanager.cpp  spritesheet.cpp
src/input/: builder.cpp  buildingbuilder.cpp  controlmanager.cpp  input.cpp  inputmodes.cpp  signalbuilder.cpp  textinput.cpp  trackbuilder.cpp
src/localization/: CMakeLists.txt  localization.cpp
src/localization/include/localization/: localization.h
src/localization/src/: localization.cpp
src/math/: intersection.cpp  math.cpp  orientation.cpp  rectangle.cpp  ringsector.cpp  rotatedrectangle.cpp  shape.cpp
src/rendering/: graphics.cpp  rendering.cpp  sprite.cpp  spritemanager.cpp
src/rollingstock/: rollingstock.cpp  rollingstockmanager.cpp  train.cpp  trainmanager.cpp
src/routing/: order.cpp  route.cpp  routefollower.cpp  routemanager.cpp
src/track/: construction.cpp  node.cpp  signal.cpp  switch.cpp  track.cpp  trackinput.cpp  trackinterface.cpp  trackreferencing.cpp  tracksystem.cpp
src/ui/: button.cpp  decoration.cpp  element.cpp  host.cpp  layouts.cpp  panel.cpp  table.cpp  tableline.cpp  tooltip.cpp  ui.cpp  uirendering.cpp
test/: CMakeLists.txt
test/track/: connection_test.cpp
test/ui/: text_test.cpp
